# Remnant-Scanner-Read-Only-

./: CONTRIBUTING.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
greynoc_remnant_scanner/: CHANGELOG.md  LICENSE  README.md  SECURITY.md  launch_gui.py  pyproject.toml
greynoc_remnant_scanner/docs/: QA_QC.md  QA_RESULTS.md
greynoc_remnant_scanner/scripts/: build_exe.bat  run_cli.bat  run_qa.bat
greynoc_remnant_scanner/src/greynoc_mcafee_scanner/: __init__.py  app.py
greynoc_remnant_scanner/tests/: test_cli.py  test_matching.py  test_reports.py
